Add support for destroyable types; implement isDestroyable method in GdType hierarchy and introduce NotImplementedException for unimplemented features